# AllSound

all_sound/: README.md  pubspec.yaml
all_sound/android/app/: build.gradle.kts
all_sound/ios/Runner/: Info.plist
all_sound/ios/Runner.xcodeproj/: project.pbxproj
all_sound/lib/: main.dart
all_sound/lib/models/: feature_model.dart  track_model.dart  user_model.dart
all_sound/lib/screens/: ai_picker_screen.dart  library_screen.dart  login_screen.dart  player_screen.dart  scan_screen.dart
all_sound/lib/services/: api_service.dart  file_scanner.dart  local_storage.dart
all_sound/linux/: CMakeLists.txt
all_sound/linux/runner/: my_application.cc
all_sound/macos/Runner.xcodeproj/: project.pbxproj
all_sound/test/: widget_test.dart
all_sound/web/: index.html  manifest.json
all_sound/windows/: CMakeLists.txt
audio_engine/: Audio Engine INFO.md  CMakeLists.txt  main.cpp  struct.md
audio_engine/core/: core.cpp  feature_extractor.cpp  feature_extractor.h
audio_engine/decoder/: audio_decoder.cpp  audio_decoder.h
audio_engine/dsp/: audio_buffer.h  audio_features.h  energy.h  silence.h
audio_engine/dsp/beat/: beat.cpp  beat.h
audio_engine/dsp/onset/: onset.h  onset_envelope.cpp
audio_engine/dsp/rhythm/kick/: kick.cpp  kick.h
audio_engine/dsp/structure/: downbeat.cpp  downbeat.h  phase.cpp  phase.h
audio_engine/dsp/tempo/: bpm.h
audio_engine/tests/: test_core.cpp
backend/: Dockerfile  requirements.txt
backend/app/: analyzer.py  main.py  models.py  queue.py
backend/tests/: test_api.py
ci/: docker-compose.yml
docs/: test.json
(+6 files in other folders)
